# xycore

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
tests/: test_balance_proof.py  test_e2e.py  test_redact_patterns.py  test_xycore.py
xycore/: __init__.py  balance.py  chain.py  crypto.py  entry.py  receipt.py  redact.py  signature.py  storage.py
