[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xycore"
version = "1.0.1"
description = "The XY primitive — cryptographic verification for any system."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.optional-dependencies]
signatures = ["cryptography>=41.0"]

[project.urls]
Homepage = "https://pruv.dev"
Documentation = "https://docs.pruv.dev"
Repository = "https://github.com/mintingpressbuilds/pruv"

[tool.setuptools.packages.find]
include = ["xycore*"]
